# mneme

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
contrib/hermes/: README.md  __init__.py  plugin.yaml
mneme/: __init__.py  cli.py  config.py  creativity.py  db.py  embeddings.py  learn.py  memory.py  pairwise.py  schema.py  session.py  traverse.py  utils.py
tests/: conftest.py  test_citation.py  test_creativity.py  test_embeddings.py  test_learn.py  test_memory.py  test_pairwise.py  test_traverse.py  test_utils.py
