[project]
name = "mneme"
version = "0.1.0"
description = "Mneme — local AI memory graph with weighted edges and citation-grounded reinforcement"
requires-python = ">=3.11"
dependencies = [
    "kuzu",
    "typer",
    "rich",
    "pydantic",
    "numpy",
    "sentence-transformers",
    "platformdirs",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mneme*"]

[project.scripts]
mneme = "mneme.cli:app"
